[package]
name = "rsevmasm"
version = "0.4.1"
authors = ["Joel Frank <joel.frank@rub.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = """
A rust crate for disassembling EVM bytecode instructions.
"""
homepage = "https://github.com/Joool/rsevmasm"
documentation = "https://github.com/Joool/rsevmasm"
repository = "https://github.com/Joool/rsevmasm"
keywords = ["program_analysis", "evm", "ethereum", "disassembler"]
edition = "2018"


[dependencies]
hex = "0.4"

[dev-dependencies]
maplit = "1.0"
